# Project_Nexus

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  claude.md  pyproject.toml
backend/: Dockerfile  config.py
backend/agents/: base.py  executor.py  planner.py  reflector.py  researcher.py  verifier.py
backend/api/: auth.py  deps.py  main.py  schemas.py
backend/api/routes/: config.py  health.py  sessions.py
backend/api/ws/: run.py
backend/core/: checkpointer.py  context.py  graph.py  loop_detector.py  memory.py  models.py  state.py
backend/db/: pinecone_client.py  postgres.py  redis.py
backend/db/migrations/: 001_init.sql  002_add_users.sql  003_add_quality_metrics.sql
backend/prompts/: executor.md  planner.md  reflector.md  researcher.md  verifier.md
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_api.py  test_full_loop.py  test_max_iterations.py  test_memory_persistence.py  test_provider_toggle_api.py  test_replan.py  test_sandbox.py
backend/tests/unit/: test_config_validation.py  test_model_router.py  test_planner.py  test_reflector.py  (+1 more)
backend/tools/: __init__.py  api_caller.py  code_executor.py  file_writer.py  rag_recall.py  web_search.py
docs/: Project_Nexus_Build_Spec.docx
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
infra/: docker-compose.yml
infra/nginx/: nginx.conf
infra/postgres/: init.sql
sandbox/: Dockerfile  egress_allowlist.txt  executor.proto  iptables-setup.sh  server.py
scripts/: eval_accuracy.py  reset_memory.py
(+16 files in other folders)
